completed the left section and summary on right

--- a/index.html
+++ b/index.html
@@ -11,7 +11,47 @@
         <h1>Attash Ul Wahab</h1>
         <h3>Software Engineer</h3>
     </header>
-    
+
+    <div class="grid-container">
+        <div class="left-part">
+            <section class="contact">
+                <h2>Contact Details</h2>
+                <p>attash@gmail.com</p>
+                <p>03** *******</p>
+                <p>Lahore, Pakistan</p>
+
+            </section>
+
+            <section class="education">
+                <h2>Education</h2>
+                <h3>BS Software Engineering</h3>
+                <p>COMSATS Lahore</p>
+                <p>2022-Present</p>
+                <h3>FSc(Pre Engineering)</h3>
+                <p>Govt. College Lahore</p>
+                <p>2019-2021</p>
+                <h3>Matric</h3>
+                <p>The Punjab School</p>
+                <p>2017-2019</p>
+            </section>
+            <section class="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>C++</li>
+                </ul>
+            </section>
+        </div>
+        <div class="right-part">
+            <section class="summary">
+                <h2>Summary</h2>
+                <p>Software Engineer with 2 years of experience in software development, testing, and maintenance. Proven ability to build high-performance, secure, data-driven applications with top-quality user experience. Proficient in a range of modern technologies including Python, JavaScript, and C++.</p>
+            </section>
+        </div>
+    </div>
+
     <footer>
         <a href="https://github.com/Attash2312">Github</a>
     </footer>
