--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section class="contact">
                 <h2>Contact Details</h2>
                 <p>attash@gmail.com</p>
-                <p>03** *******</p>
+                <p>+92 *** *** ****</p>
                 <p>Lahore, Pakistan</p>
 
             </section>
@@ -25,13 +25,13 @@
             <section class="education">
                 <h2>Education</h2>
                 <h3>BS Software Engineering</h3>
-                <p>COMSATS Lahore</p>
+                <p><strong>COMSATS Lahore</strong></p>
                 <p>2022-Present</p>
                 <h3>FSc(Pre Engineering)</h3>
-                <p>Govt. College Lahore</p>
+                <p><strong>Govt. College Lahore</strong></p>
                 <p>2019-2021</p>
                 <h3>Matric</h3>
-                <p>The Punjab School</p>
+                <p><strong>The Punjab School</strong></p>
                 <p>2017-2019</p>
             </section>
             <section class="skills">
@@ -49,10 +49,37 @@
                 <h2>Summary</h2>
                 <p>Software Engineer with 2 years of experience in software development, testing, and maintenance. Proven ability to build high-performance, secure, data-driven applications with top-quality user experience. Proficient in a range of modern technologies including Python, JavaScript, and C++.</p>
             </section>
+
+            <section class="experience">
+                <h2>Experience</h2>
+                <h3>Software Engineer</h3>
+                <p><strong>COMSATS Lahore</strong></p>
+                <p>2021-Present</p>
+                <ul>
+                    <li>Developed and maintained 5+ software applications for various clients.</li>
+                    <li>Designed and implemented a new user interface for the entire application.</li>
+                    <li>Worked closely with clients to establish problem specifications and system designs.</li>
+                    <li>Developed and maintained 5+ software applications for various clients.</li>
+                </ul>
+                <h3>Web Developer</h3>
+                <p><strong>Freelancer</strong></p>
+                <p>2019-2021</p>
+                <ul>
+                    <li>Developed and maintained 5+ websites for various clients.</li>
+                    <li>Designed and implemented a new user interface for the entire website.</li>
+                    <li>Worked closely with clients to establish problem specifications and system designs.</li>
+                    <li>Developed and maintained 5+ websites for various clients.</li>
+            </section>
+
+            <section class="references">
+                <h2>References</h2>
+                <p>Available upon request</p>
+            </section>
         </div>
     </div>
 
     <footer>
+        <img src="images/github logo.png" alt="">
         <a href="https://github.com/Attash2312">Github</a>
     </footer>
 </body>
